--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 
 <head>
-<script type="text/javascript" src="custom.js"></script>
+    <link rel="stylesheet" href="custom.css">
+    <script type="text/javascript" src="custom.js"></script>
 </head>
 
 <body onload="getParams()">
-    <br><br>
-    <div id="site">
-        <p>You will be redirected to ... soon!</p>
+    <br><br><br>
+    <h1>Just a moment...</h1>
+    <div class="slider">
+        <div class="line"></div>
+        <div class="break dot1"></div>
+        <div class="break dot2"></div>
+        <div class="break dot3"></div>
     </div>
-    <br><br>
-    <br><br>
-    <a href="?time=10&url=https://google.com">Redirect to google.com after 10s</a>
-    <br><br>
+    <p id="site">We're redirecting you to ... Not working? <a href="#0">Click here.</a></p>
 </body>
 </html>
