--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <div class="break dot2"></div>
         <div class="break dot3"></div>
     </div>
-    <p id="site">We're redirecting you to ... Not working? <a href="#0">Click here.</a></p>
+    <p id="site">We're redirecting you to ... Not working? <a href="#">Click here.</a></p>
 </body>
 </html>
